--- a/contact.html
+++ b/contact.html
@@ -12,15 +12,18 @@
     <link rel="stylesheet" type="text/css" href="src/style.css" />
     <title>Croissant</title>
   </head>
-  <body class="ml-4">
-    <h1 class="text-center mt-5">🥐 Croissant</h1>
-    <p class="text-center">
-      A croissant is a buttery, flaky, viennoiserie pastry of Austrian origin,
-      named for its historical crescent shape. Croissants and other viennoiserie
-      are made of a layered yeast-leavened dough.
-    </p>
 
-    <footer class="d-flex flex-row justify-content-center mt-5 mb-5">
+  <body class="ml-4">
+    <h1 class="text-center mt-5">🥐 Croissant Contacts</h1>
+
+    <h2 class="text-info text-center mt-3">
+      We want to help you eat croissants!
+    </h2>
+    <p class="text-center">
+      To contact croissant.com, please email us at
+      <a href="mailto:hello@croissant.com">hello@croissant.com</a> for more info
+    </p>
+    <footer class="d-flex flex-row justify-content-center mb-5 mt-5">
       <a href="/" class="text-success">Home</a>
       <a href="/photo.html" class="text-success">Photo</a>
       <a href="/contact.html" class="text-success">Contact me</a>
