--- a/photo.html
+++ b/photo.html
@@ -12,13 +12,14 @@
     <link rel="stylesheet" type="text/css" href="src/style.css" />
     <title>Croissant</title>
   </head>
+
   <body class="ml-4">
-    <h1 class="text-center mt-5">🥐 Croissant</h1>
-    <p class="text-center">
-      A croissant is a buttery, flaky, viennoiserie pastry of Austrian origin,
-      named for its historical crescent shape. Croissants and other viennoiserie
-      are made of a layered yeast-leavened dough.
-    </p>
+    <h1 class="text-center mt-5">🥐 Picture of a Croissant</h1>
+    <img
+      src="/media/croissant.jpg"
+      alt="Yummy looking croissant"
+      class="croissant-photo"
+    />
 
     <footer class="d-flex flex-row justify-content-center mt-5 mb-5">
       <a href="/" class="text-success">Home</a>
