--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
     <title>Croissant</title>
   </head>
 
-  <body class="ml-4">
+  <body class="ml-4 mr-4">
     <h1 class="text-center mt-5">🥐 Croissant Contacts</h1>
 
     <h2 class="text-info text-center mt-3">
