--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" type="text/css" href="src/style.css" />
     <title>Croissant</title>
   </head>
-  <body class="ml-4">
+  <body class="ml-4 mr-4">
     <h1 class="text-center mt-5">🥐 Croissant</h1>
     <p class="text-center">
       A croissant is a buttery, flaky, viennoiserie pastry of Austrian origin,
