--- a/photo.html
+++ b/photo.html
@@ -13,7 +13,7 @@
     <title>Croissant</title>
   </head>
 
-  <body class="ml-4">
+  <body class="ml-4 mr-4">
     <h1 class="text-center mt-5">🥐 Picture of a Croissant</h1>
     <img
       src="/media/croissant.jpg"
