--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="description" content="A site dedicated to croissant lovers" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="stylesheet"
@@ -12,6 +13,22 @@
     <link rel="stylesheet" type="text/css" href="src/style.css" />
     <title>Croissant</title>
   </head>
+
+  <!-- Google tag (gtag.js) -->
+  <script
+    async
+    src="https://www.googletagmanager.com/gtag/js?id=G-N19QRWT38D"
+  ></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag("js", new Date());
+
+    gtag("config", "G-N19QRWT38D");
+  </script>
+
   <body class="ml-4 mr-4">
     <h1 class="text-center mt-5">🥐 Croissant</h1>
     <p class="text-center">
