--- a/photo.html
+++ b/photo.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="description" content="A photo for croissant lovers" />
+    <meta
+      name="description"
+      content="Croissant: A photo for croissant lovers"
+    />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
