--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="description" content="Contact us, croissant lovers" />
+    <meta
+      name="description"
+      content="Croissant: Contact us, croissant lovers"
+    />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
